Added support for OpenJDK 1.8